--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Intellij IDEA files
+
+Week1/.idea/*
+Week1/DesktopApp/.idea/*
+Week1/out/*
+*.iml
+*.idea/*
