--- a/Week2/pom.xml
+++ b/Week2/pom.xml
@@ -71,6 +71,13 @@
             <version>1.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-ehcache -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <version>5.2.11.Final</version>
+        </dependency>
+
 
     </dependencies>
 
