--- a/Week4/src/main/resources/Message.properties
+++ b/Week4/src/main/resources/Message.properties
@@ -3,3 +3,4 @@ skills_welcome=Welcome to Skills Page
 students_welcome=Welcome to Students Page
 projects_page=Welcome to Projects Page
 students_skills_welcome= Welcome to Students Skills Page
+projects_skills_welcome= Welcome to Projects Skills Page
