--- a/Week4/web/WEB-INF/web.xml
+++ b/Week4/web/WEB-INF/web.xml
@@ -29,4 +29,9 @@
         <param-value>Development</param-value>
     </context-param>
 
+    <session-config>
+        <tracking-mode>COOKIE</tracking-mode>
+    </session-config>
+
+
 </web-app>
